Fix tabs spacing

--- a/Source/Blazorise.FluentUI2/Styles/components/_tabs.scss
+++ b/Source/Blazorise.FluentUI2/Styles/components/_tabs.scss
@@ -277,8 +277,8 @@
 
     .fui-TabPanel {
         padding-bottom: 0px;
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: var(--spacingHorizontalM);
+        padding-right: var(--spacingHorizontalM);
         padding-top: 0px;
         display: none;
 
